--- a/styles.css
+++ b/styles.css
@@ -118,3 +118,11 @@ nav ul li a:hover {
     transition: width 0.5s ease;
     animation: gradient 5s linear infinite;
 }
+
+.warning {
+    color: rgb(255, 122, 122);
+    background-color: rgba(255, 0, 0, 0.05);
+    padding: 15px;
+    border-radius: 15px;
+    border: 1px solid #ff5f5faa;;
+}
