--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ a {
 }
 
 header {
-    background-color: #333;
+    background-color: #202020;
     color: #fff;
 }
 
@@ -37,6 +37,10 @@ nav ul {
 
 nav ul li {
     margin-right: 20px;
+    background-color: #ffffff0e;
+    padding: 7px 15px 7px 15px;
+    border-radius: 10px;
+    border: 1px solid #cccccc1e;;
 }
 
 nav ul li:last-child {
@@ -92,9 +96,10 @@ nav ul li a:hover {
 
 .status-bar {
     height: 10px;
-    background-color: lightgray;
+    background-color: rgba(211, 211, 211, 0.062);
     border-radius: 5px;
     position: relative;
+    border: 1px solid #ffffff73;
 }
 
 
@@ -125,4 +130,12 @@ nav ul li a:hover {
     padding: 15px;
     border-radius: 15px;
     border: 1px solid #ff5f5faa;;
+}
+
+.tonviewer {
+    color: #8999f3;
+    background-color: #ffffff0e;
+    padding: 5px 15px 5px 15px;
+    border-radius: 10px;
+    border: 1px solid #cccccc1e;
 }
