--- a/styles.css
+++ b/styles.css
@@ -84,13 +84,14 @@ nav ul li a:hover {
 }
 
 .wallet-card {
-    border: 1px solid #ccc;
+    border: 1px solid #cccccc65;
     border-radius: 10px;
     padding: 20px;
     margin-bottom: 15px;
     padding-top: 5px;
     position: relative;
     background-color: rgba(255, 255, 255, 0.014);
+    background: linear-gradient(215deg, #ad32ff17, #77b0ff00);
 }
 
 
