--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ nav ul li a:hover {
     border: 1px solid #ff5f5faa;;
 }
 
-.tonviewer {
+.tonscan {
     color: #8999f3;
     background-color: #ffffff0e;
     padding: 5px 15px 5px 15px;
